2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/README.texi (Top): remove note about
	xdelta.

	* Documentation/topdocs/INSTALL.texi (Top): remove Flex
	requirement.

	* stepmake/aclocal.m4: STEPMAKE_FLEXLEXER_LOCATION: new
	function. Figure out where FlexLexer.h lives

	* lily/GNUmakefile (OUT_DIST_FILES): dist lexer.cc and FlexLexer.h
	
2005-05-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-invoke-editor.scm (dissect-uri): Handle URIs
	with Windows root in file name.

	* scm/backend-library.scm (ly:system): Only redirect output (using
	system and shell, ugh) if /dev/null is writable.

	* Documentation/pictures/GNUmakefile [PLATFORM_WINDOWS]: Build
	windows icon.

	* scm/lily.scm (is-absolute?): New function.  Fixes absolute files
	on Mingw.

	* scm/output-ps.scm (grob-cause): Use it.  Fixes PDF point and
	click.

	* flower/file-path.cc (is_dir, is_file): New function.  Actually
	use result of stat when available.

	* flower/file-path.cc (find): Use it.  Refactor.  Fixes Mingw,
	absolute file name and root.

	* scm/lily.scm (PLATFORM): On mingw, slashify getcwd.

	* scm/editor.scm (get-editor-command): Typo: do not apply editor.

	* flower/file-name.cc (slashify): Bugfix, do substitute if no
	slashes in file name.

2005-05-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/preface.itely (Preface): Run
	texinfo-all-menus-update.

	* scm/editor.scm (get-editor-command): Bugfix: allow full
	LYEDITOR setting, partial XEDITOR setting.  With typo fix.

	* Documentation/pictures/lilypond-48.xpm: New file.

	* flower/file-path.cc (to_string): Bugfix: use PATHSEP.

	* ly/Welcome_to_LilyPond.ly: New file.

	* lily/main.cc (main): Only identify if we have a terminal.

	* scm/backend-library.scm (postscript->png)
	(postscript->pdf): Fix file name quoting for GS/MINGW (ie,
	non-/bin/sh).

2005-05-13  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/AUTHORS.texi: polish, update.
