@@ -97,7 +97,7 @@
    (define (slashify x)
      (if (string-index x #\/)
 	 x
-	 (string-regexp-substitute "\\" "/" x)))
+	 (string-regexp-substitute "\\\\" "/" x)))
    ;; FIXME: this prints a warning.
   (define-public (ly-getcwd)
      (slashify (native-getcwd))))
