@@ -1,3 +1,14 @@
+2005-05-15  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scm/editor.scm (slashify): New function.
+	(get-editor-command): Use it.
+	(get-command-template): Do not alter editor command if
+	environment value includes `%(file)s' magic.
+
+	* scripts/lilypond-invoke-editor.scm (unquote-uri): New function.
+	(dissect-uri): Use it.
+	(unquote-uri): Bugfix.
+
 2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* Documentation/topdocs/README.texi (Top): remove note about
